--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,52 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 body {
     
   background-image: url(https://stopga.me/images/blogs/2016/12/07/YEb4kJQAF.jpg);
   background-repeat: repeat-x;
   background-position: center center;
-  font-family: Verdana,sans-serif;
-  font-size: 16px;
-  color: white;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 14px;
+  color: #cfe2f3;
   background-color: rgb(38, 113, 211);
   text-align: center;
-  }
+}
 
-img {
-  width: 60%;
-  opacity: 75%;
+h2 {
+  font-size: 2em
+}
+
+a:link {
+  font-family: 'Ubuntu', sans-serif;
+  color: black;
+  text-decoration: none;
+
+}
+
+a:hover {
+  color: #134f5c;
+
+}
+
+a:visited {
+  color: #134f5c
 }
 
 .all {
+  padding: 125px 0 25px;
   
 }
 .gdocs {
-  position: relative;
   height: 400px;
   width: 95%;
-  top: 125px;
+    
   }
+
+ footer {
+  padding: 5px 10px 5px;
+  text-align: left; 
+  background: #cfe2f3;
+  color: #134f5c;
+  font-size: 13px;
+
+}
